--- a/src/assets/css/customize.css
+++ b/src/assets/css/customize.css
@@ -1,16 +1,6 @@
 html, body {
-    font-family: Arial, Helvetica, "Microsoft YaHei", sans-serif;
-    -webkit-tap-highlight-color: transparent;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    height: 100%;
-    width: 100%;
     padding: 0;
     margin: 0;
-}
-
-#app {
-    height: 100%;
 }
 
 a {
@@ -49,34 +39,40 @@ pre {
 }
 
 .el-header {
-    width: 100%;
     line-height: 60px;
+    background-color: #fff;
     border-bottom: 1px solid #eee;
     box-shadow: 0 1px 3px rgba(26, 26, 26, .1);
 }
 
 .el-container {
-    height: 100%;
+    min-height: 100vh;
 }
 
-.el-menu {
-    height: 100%;
+.el-footer {
+    padding: 20px;
+    background-color: #fff;
+    border-top: 1px solid #eee;
 }
 
-.el-breadcrumb {
-    font-size: 16px;
+.el-aside .el-menu {
+    height: 100vh;
 }
 
 .el-menu .el-scrollbar__wrap {
     overflow-x: hidden;
 }
 
-.el-col .el-card {
-    height: 100%;
+.el-icon-success {
+    color: #67C23A;
 }
 
-.el-tooltip__popper {
-    max-width: 80%;
+.el-icon-warning {
+    color: #E6A23C;
+}
+
+.el-icon-error {
+    color: #f56c6c;
 }
 
 .flex-between {
@@ -110,6 +106,14 @@ pre {
     width: 100%;
 }
 
+.box-card {
+    max-width: 360px;
+}
+
+.box-middle {
+    margin: 10vh auto;
+}
+
 .card-title {
     font-weight: 600;
     text-align: center;
@@ -119,20 +123,4 @@ pre {
 .pagination {
     margin-top: 15px;
     text-align: center;
-}
-
-.el-icon-success {
-    color: #67C23A;
-}
-
-.el-icon-warning {
-    color: #E6A23C;
-}
-
-.el-icon-error {
-    color: #f56c6c;
-}
-
-.el-tag + .el-tag {
-    margin-left: 10px;
 }
