:bug: 修复课程封面上传框样式

--- a/src/assets/css/customize.css
+++ b/src/assets/css/customize.css
@@ -184,7 +184,7 @@ pre {
     font-size: 18px;
 }
 
-.avatar-uploader-icon {
+.picture-uploader-icon {
     font-size: 28px;
     color: #8c939d;
     width: 215px;
